align stuff fixed, maybe?

--- a/css/barebones.css
+++ b/css/barebones.css
@@ -176,4 +176,7 @@ main .row {
     .w40, .w45, .w50, .w55, .w60, .w65, .w66, .w70, .w75, .w80, .w85, .w90, .w95, .w100 {
         width: 98%;
     }
+    .navbar {
+        align-items: left;
+    }
 }
