--- a/css/main.css
+++ b/css/main.css
@@ -267,8 +267,9 @@ footer .container .row .w100 {
         right: 0;
         margin: 0;
         padding-top: 12.5px;
-        padding-bottom: 12.5px
+        padding-bottom: 12.5px;
     }
+
     .glide {
         width: 84%;
         margin-left: 8%;
